--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.21.2",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.12.1"
+    "mongoose": "^8.12.1",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -31,6 +32,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.13.9",
+    "@types/redis": "^4.0.11",
     "eslint": "^9.21.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
