--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
-    "redis": "^4.7.0"
+    "redis": "^4.7.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -33,6 +35,8 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.13.9",
     "@types/redis": "^4.0.11",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "eslint": "^9.21.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
