--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,13 @@
     "target": "ES6",
     "strict": true,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node",
+    "baseUrl": "./src", // ✅ Allows imports without `/src`
+    "paths": {
+      "*": ["*"] // ✅ Ensures TypeScript resolves all modules
+    }
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "tests"]
 }
