--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,29 @@
 version: '3.8'
 
 services:
+  app1:
+    build: .
+    ports:
+      - '3001:3000'
+  app2:
+    build: .
+    ports:
+      - '3002:3000'
+  app3:
+    build: .
+    ports:
+      - '3003:3000'
+
+  nginx:
+    image: nginx
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - '80:80'
+    depends_on:
+      - app1
+      - app2
+      - app3
   prometheus:
     image: prom/prometheus
     volumes:
